-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8218557 | 11.0.3 | Thomas Stuefe | P4 | Resolved | Fixed | master |
"VM.metaspace basic" is a variant of the "big" VM.metaspace report. It misprints the sizes of the chunk free lists:
thomas@mainframe:/shared/projects/openjdk$ jjjcmd stuefe VM.metaspace basic
12967:
Usage:
Non-class: 12,83 MB capacity, 11,26 MB ( 88%) used, 1,54 MB ( 12%) free+waste, 35,69 KB ( <1%) overhead.
Class: 1,37 MB capacity, 1,08 MB ( 79%) used, 287,62 KB ( 20%) free+waste, 12,94 KB ( <1%) overhead.
Both: 14,20 MB capacity, 12,34 MB ( 87%) used, 1,82 MB ( 13%) free+waste, 48,62 KB ( <1%) overhead.
Virtual space:
Non-class space: 16,00 MB reserved, 15,25 MB ( 95%) committed
Class space: 1,00 GB reserved, 99,10 MB ( 10%) committed
Both: 1,02 GB reserved, 114,35 MB ( 11%) committed
Chunk freelists:
Non-Class: 280,75 KB <<<<<<
Class: 12,21 MB <<<<<<
Both: 12,48 MB <<<<<<
Compare with the non-basic command:
thomas@mainframe:/shared/projects/openjdk$ jjjcmd stuefe VM.metaspace
12967:
Total Usage ( 175 loaders):
Non-Class: 571 chunks, 12,83 MB capacity, 11,26 MB ( 88%) used, 1,54 MB ( 12%) free, 480 bytes ( <1%) waste, 35,69 KB ( <1%) overhead, deallocated: 315 blocks with 75,33 KB
Class: 207 chunks, 1,37 MB capacity, 1,08 MB ( 79%) used, 287,62 KB ( 20%) free, 0 bytes ( 0%) waste, 12,94 KB ( <1%) overhead, deallocated: 31 blocks with 11,12 KB
Both: 778 chunks, 14,20 MB capacity, 12,34 MB ( 87%) used, 1,82 MB ( 13%) free, 480 bytes ( <1%) waste, 48,62 KB ( <1%) overhead, deallocated: 346 blocks with 86,45 KB
Virtual space:
Non-class space: 16,00 MB reserved, 15,25 MB ( 95%) committed
Class space: 1,00 GB reserved, 99,10 MB ( 10%) committed
Both: 1,02 GB reserved, 114,35 MB ( 11%) committed
Chunk freelists:
Non-Class:
specialized chunks: 2, capacity 2,00 KB <<<<<<
small chunks: 33, capacity 132,00 KB <<<<<<
medium chunks: 33, capacity 2,06 MB <<<<<<
humongous chunks: (none)
Total: 68, capacity=2,19 MB
Class:
specialized chunks: (none)
small chunks: (none)
medium chunks: 3125, capacity 97,66 MB
humongous chunks: (none)
Total: 3125, capacity=97,66 MB
Waste (percentages refer to total committed size 114,35 MB):
Committed unused: 304,00 KB ( <1%)
Waste in chunks in use: 480 bytes ( <1%)
Free in chunks in use: 1,82 MB ( 2%)
Overhead in chunks in use: 48,62 KB ( <1%)
In free chunks: 99,85 MB ( 87%)
Deallocated from chunks in use: 86,45 KB ( <1%) (346 blocks)
-total-: 102,10 MB ( 89%)
thomas@mainframe:/shared/projects/openjdk$ jjjcmd stuefe VM.metaspace basic
12967:
Usage:
Non-class: 12,83 MB capacity, 11,26 MB ( 88%) used, 1,54 MB ( 12%) free+waste, 35,69 KB ( <1%) overhead.
Class: 1,37 MB capacity, 1,08 MB ( 79%) used, 287,62 KB ( 20%) free+waste, 12,94 KB ( <1%) overhead.
Both: 14,20 MB capacity, 12,34 MB ( 87%) used, 1,82 MB ( 13%) free+waste, 48,62 KB ( <1%) overhead.
Virtual space:
Non-class space: 16,00 MB reserved, 15,25 MB ( 95%) committed
Class space: 1,00 GB reserved, 99,10 MB ( 10%) committed
Both: 1,02 GB reserved, 114,35 MB ( 11%) committed
Chunk freelists:
Non-Class: 280,75 KB <<<<<<
Class: 12,21 MB <<<<<<
Both: 12,48 MB <<<<<<
Compare with the non-basic command:
thomas@mainframe:/shared/projects/openjdk$ jjjcmd stuefe VM.metaspace
12967:
Total Usage ( 175 loaders):
Non-Class: 571 chunks, 12,83 MB capacity, 11,26 MB ( 88%) used, 1,54 MB ( 12%) free, 480 bytes ( <1%) waste, 35,69 KB ( <1%) overhead, deallocated: 315 blocks with 75,33 KB
Class: 207 chunks, 1,37 MB capacity, 1,08 MB ( 79%) used, 287,62 KB ( 20%) free, 0 bytes ( 0%) waste, 12,94 KB ( <1%) overhead, deallocated: 31 blocks with 11,12 KB
Both: 778 chunks, 14,20 MB capacity, 12,34 MB ( 87%) used, 1,82 MB ( 13%) free, 480 bytes ( <1%) waste, 48,62 KB ( <1%) overhead, deallocated: 346 blocks with 86,45 KB
Virtual space:
Non-class space: 16,00 MB reserved, 15,25 MB ( 95%) committed
Class space: 1,00 GB reserved, 99,10 MB ( 10%) committed
Both: 1,02 GB reserved, 114,35 MB ( 11%) committed
Chunk freelists:
Non-Class:
specialized chunks: 2, capacity 2,00 KB <<<<<<
small chunks: 33, capacity 132,00 KB <<<<<<
medium chunks: 33, capacity 2,06 MB <<<<<<
humongous chunks: (none)
Total: 68, capacity=2,19 MB
Class:
specialized chunks: (none)
small chunks: (none)
medium chunks: 3125, capacity 97,66 MB
humongous chunks: (none)
Total: 3125, capacity=97,66 MB
Waste (percentages refer to total committed size 114,35 MB):
Committed unused: 304,00 KB ( <1%)
Waste in chunks in use: 480 bytes ( <1%)
Free in chunks in use: 1,82 MB ( 2%)
Overhead in chunks in use: 48,62 KB ( <1%)
In free chunks: 99,85 MB ( 87%)
Deallocated from chunks in use: 86,45 KB ( <1%) (346 blocks)
-total-: 102,10 MB ( 89%)
- backported by
-
JDK-8218557 "jcmd VM.metaspace basic" misreports free chunk space
-
- Resolved
-