8218156: "jcmd VM.metaspace basic" misreports free chunk space

Reviewed-by: zgu